--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "next": "10.0.9",
     "react": "17.0.1",
