--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.3.1",
     "next": "10.0.9",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-firebaseui": "^4.1.0"
   }
 }
