--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "next": "10.0.9",
+    "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-firebaseui": "^4.1.0"
+    "react-firebaseui": "^4.1.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^2.0.4"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
