--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "next": "10.0.9",
+    "next-firebase-auth": "^0.13.0-alpha.0",
+    "nookies": "^2.5.2",
     "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
