--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
     "next": "10.0.9",
     "next-firebase-auth": "^0.13.0-alpha.0",
     "nookies": "^2.5.2",
